--- a/app/src/main/res/values-es/show_case.xml
+++ b/app/src/main/res/values-es/show_case.xml
@@ -2,16 +2,18 @@
 <resources>
     <string name="show_case_first_title">AÑADIR CONTACTOS</string>
     <string name="show_case_first_subtitle">Aquí puedes invitar a personas, buscándolos por su apodo.</string>
-    <string name="show_case_second_title">AGENDA</string>
+    <string name="show_case_second_title">MIS CONTACTOS</string>
     <string name="show_case_second_subtitle">Aquí encuentras los contactos que ya agregaste en NapoleoN Chat.</string>
     <string name="show_case_third_title">ESTADOS</string>
-    <string name="show_case_third_subtitle">Diles a tus contactos como te encuentras con una frase.</string>
+    <string name="show_case_third_subtitle">Dile a tus contactos como te encuentras con una frase.</string>
     <string name="show_case_fourth_title">MENÚ PRINCIPAL</string>
-    <string name="show_case_fourth_subtitle">Sugerimos que primero configures la SEGURIDAD de tu cuenta.</string>
-    <string name="show_case_fifth_title">TU PRIVACIDAD ES NUESTRA PRIORIDAD</string>
-    <string name="show_case_fifth_subtitle">Mantén tus datos a salvo modificando la cuenta a tu gusto.</string>
-    <string name="show_case_sixth_title">NAPOLEON NO GUARDA TUS DATOS</string>
-    <string name="show_case_sixth_subtitle">Si quieres mantener siempre tu mismo usuario, completa las preguntas de seguridad.</string>
+    <string name="show_case_fourth_subtitle">Te damos diferentes opciones para que modifiques la cuenta a tu gusto.</string>
+    <string name="show_case_fifth_title">AJUSTES DE SEGURIDAD</string>
+    <string name="show_case_fifth_subtitle">Mantén tu información a salvo configurando la SEGURIDAD de tu cuenta.</string>
+    <string name="show_case_sixth_title">RECUPERACIÓN DE CUENTA</string>
+    <string name="show_case_sixth_subtitle">Si quieres conservar tu mismo usuario, completa las preguntas de seguridad.</string>
     <string name="show_case_seventh_title">AUTODESTRUCCIÓN DE MENSAJES</string>
-    <string name="show_case_seventh_subtitle">"Personaliza el tiempo de duración de tus mensajes. "</string>
+    <string name="show_case_seventh_subtitle">Personaliza el tiempo de duración de tus mensajes.</string>
+    <string name="text_repeat_tutorial">Repetir tutorial</string>
+    <string name="text_message_dialog_repeat_tutorial">¿Deseas dar un repaso de las principales funciones de la app?</string>
 </resources>
