NS-1006, NS-992, NS-993, NS-983, NS-985, NS-988, NS-984, NS-987, NS-990, NS-991, NS-989, NS-986, NS-1007

--- a/app/src/main/res/layout/contact_us_fragment.xml
+++ b/app/src/main/res/layout/contact_us_fragment.xml
@@ -53,6 +53,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/normal_margin"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="500"
+                    app:errorEnabled="true"
+                    app:counterTextColor="?attr/attrTextColorConversationInputPanel"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                     app:layout_constraintStart_toStartOf="@+id/guideline_start"
                     app:layout_constraintTop_toBottomOf="@+id/spinner_category">
@@ -67,7 +71,7 @@
                         android:maxLines="5"
                         android:singleLine="false"
                         android:textColor="?attr/attrTextColorConversationInputPanel"
-                        tools:text="@tools:sample/lorem/random" />
+                        tools:text="@tools:sample/lorem[50]" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
