--- a/app/src/main/res/layout/language_selection_dialog_fragment.xml
+++ b/app/src/main/res/layout/language_selection_dialog_fragment.xml
@@ -33,6 +33,7 @@
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/view_indicator"
             app:spanCount="3"
+            android:background="?attr/attrBackgroundColorBackgroundDialog"
             tools:context=".ui.languageSelection.LanguageSelectionDialogFragment"
             tools:itemCount="6"
             tools:listitem="@layout/language_selection_dialog_fragment_item" />
