--- a/app/src/main/res/layout/language_selection_dialog_fragment_item.xml
+++ b/app/src/main/res/layout/language_selection_dialog_fragment_item.xml
@@ -21,6 +21,7 @@
         android:layout_marginEnd="@dimen/normal_margin"
         android:layout_marginBottom="@dimen/normal_margin"
         android:onClick="@{() -> clickListener.onClick(language)}"
+        app:cardBackgroundColor="?attr/attrBackgroundColorBackgroundDialog"
         app:cardElevation="@dimen/elevation">
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -64,7 +65,7 @@
                 app:layout_constraintEnd_toEndOf="@id/imageView_flag"
                 app:layout_constraintStart_toStartOf="@id/imageView_flag"
                 app:layout_constraintTop_toBottomOf="@id/imageView_flag"
-                tools:text="Español" />
+                tools:text="Portugues" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
