--- a/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
+++ b/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
@@ -56,7 +56,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputLayout_password"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        style="@style/TextInputLayoutOutlined"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/normal_margin"
@@ -65,6 +65,7 @@
                         app:layout_constraintEnd_toEndOf="@id/guideline_end"
                         app:layout_constraintStart_toStartOf="@id/guideline_start"
                         app:layout_constraintTop_toBottomOf="@id/textView_description"
+                        app:passwordToggleTint="?attr/attrTintColorSecondaryDark"
                         app:passwordToggleEnabled="true">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -75,7 +76,8 @@
                             android:lines="1"
                             android:maxLength="40"
                             android:maxLines="1"
-                            android:singleLine="true" />
+                            android:singleLine="true"
+                            android:textColor="?attr/attrTextColorConversationInputPanel" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
