--- a/app/src/main/res/values-de/color_scheme.xml
+++ b/app/src/main/res/values-de/color_scheme.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="text_section_system_themes">SYSTEMPROBLEME</string>
     <string name="text_section_dark_themes">DUNKLE THEMEN</string>
-    <string name="text_section_light_themes">LICHTTHEMA</string>
+    <string name="text_section_light_themes">KLARE THEMEN</string>
 
 </resources>
