--- a/app/src/main/res/values-de/self_destruct_time.xml
+++ b/app/src/main/res/values-de/self_destruct_time.xml
@@ -8,7 +8,7 @@
     <string name="text_every_six_hours">6 Stunden</string>
     <string name="text_every_twenty_four_hours">24 Stunden</string>
     <string name="text_info_message_self_destruction">Gesendete Nachrichten werden nach der gewählten Zeit gelöscht werden, sobald sie gesehen oder gehört haben.</string>
-    <string name="text_every_seven_days">7 días</string>
+    <string name="text_every_seven_days">7 Tage</string>
     <string name="text_every_five_seconds">5 sekunden</string>
     <string name="text_every_fifteen_seconds">15 sekunden</string>
     <string name="text_every_thirty_seconds">30 sekunden</string>
