--- a/app/src/main/res/values-es/contact_us.xml
+++ b/app/src/main/res/values-es/contact_us.xml
@@ -7,4 +7,5 @@
     <string name="text_message">Mensaje</string>
     <string name="text_pqrs_create">Tú solicitud ha sido envida satisfactoriamente</string>
     <string name="text_send">Enviar</string>
+    <string name="text_min_twenty_char">Mínimo 20 caracteres</string>
 </resources>
