--- a/app/src/main/res/values-fr/contact_us.xml
+++ b/app/src/main/res/values-fr/contact_us.xml
@@ -7,4 +7,5 @@
     <string name="text_message">message</string>
     <string name="text_pqrs_create">Votre demande a été envoyée avec succès.</string>
     <string name="text_send">Envoyer</string>
+    <string name="text_min_twenty_char">Au moins 20 caractères</string>
 </resources>
