--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -76,4 +76,5 @@
     <string name="text_empty_state_search_contacts">Votre recherche n\'a pas donné de résultat</string>
     <string name="text_contact">CONTACT</string>
     <string name="text_error_updating_language">Une erreur est survenue changer la langue, s\'il vous plaît essayer à nouveau</string>
+    <string name="text_emptystate_search_friends_title">Recherchez vos amis par pseudonyme et communiquer</string>
 </resources>
