--- a/app/src/main/res/values-it/contact_us.xml
+++ b/app/src/main/res/values-it/contact_us.xml
@@ -7,4 +7,5 @@
     <string name="text_message">messaggio</string>
     <string name="text_pqrs_create">La tua richiesta è stata inviata con successo.</string>
     <string name="text_send">send</string>
+    <string name="text_min_twenty_char">Almeno 20 caratteri</string>
 </resources>
