--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -76,4 +76,5 @@
     <string name="text_empty_state_search_contacts">La tua ricerca non ha prodotto risultati</string>
     <string name="text_contact">CONTATTO</string>
     <string name="text_error_updating_language">Verificato un errore durante la modifica lingua, riprova</string>
+    <string name="text_emptystate_search_friends_title">Procurar seus amigos pelo apelido e comunicar</string>
 </resources>
