--- a/app/src/main/res/values-pt/contact_us.xml
+++ b/app/src/main/res/values-pt/contact_us.xml
@@ -7,4 +7,5 @@
     <string name="text_message">Mensagem</string>
     <string name="text_pqrs_create">Sua solicitação foi enviada com sucesso.</string>
     <string name="text_send">Enviar</string>
+    <string name="text_min_twenty_char">Pelo menos 20 caracteres</string>
 </resources>
