--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -76,4 +76,5 @@
     <string name="text_empty_state_search_contacts">Sua busca não gerou resultados</string>
     <string name="text_contact">CONTATO</string>
     <string name="text_error_updating_language">Ocorreu um erro ao mudar de idioma, por favor tente novamente</string>
+    <string name="text_emptystate_search_friends_title">Busca a tus amigos por apodo y comunícate</string>
 </resources>
