--- a/app/src/main/res/values/contact_us.xml
+++ b/app/src/main/res/values/contact_us.xml
@@ -7,4 +7,5 @@
     <string name="text_message">Message</string>
     <string name="text_pqrs_create">Your request has been sent successfully</string>
     <string name="text_send">Send</string>
+    <string name="text_min_twenty_char">Least 20 characters</string>
 </resources>
