--- a/app/src/main/res/layout/recovery_account_fragment.xml
+++ b/app/src/main/res/layout/recovery_account_fragment.xml
@@ -67,11 +67,11 @@
                         android:layout_height="wrap_content"
                         android:digits="@string/nickname_configuration"
                         android:hint="@string/text_nickname_with_asterisk"
-                        android:textColor="?attr/attrTextColorConversationInputPanel"
                         android:lines="1"
-                        android:maxLength="@dimen/max_length_nickname"
+                        android:maxLength="@integer/max_length_nickname"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:textColor="?attr/attrTextColorConversationInputPanel" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
