NS-1019, NS-1017, NS-1010, NS-1012, NS-1015, NS-1013, NS-1016, NS-1014

--- a/app/src/main/res/drawable/bg_dialog.xml
+++ b/app/src/main/res/drawable/bg_dialog.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <solid android:color="@color/white" />
     <corners
-        android:topLeftRadius="@dimen/large_margin"
-        android:topRightRadius="@dimen/large_margin" />
+        android:topLeftRadius="@dimen/x_large_margin"
+        android:topRightRadius="@dimen/x_large_margin" />
 
 </shape>
