--- a/app/src/main/res/layout/recovery_account_questions_fragment.xml
+++ b/app/src/main/res/layout/recovery_account_questions_fragment.xml
@@ -33,7 +33,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:layout_marginTop="@dimen/large_margin"
+                android:layout_marginTop="@dimen/x_large_margin"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@id/textView_control_question"
