--- a/app/src/main/res/layout/register_recovery_account.xml
+++ b/app/src/main/res/layout/register_recovery_account.xml
@@ -29,7 +29,7 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_margin"
+            android:layout_marginTop="@dimen/x_large_margin"
             android:text="@string/text_recovery_account_false"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
@@ -41,7 +41,7 @@
             style="@style/SmallBodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_margin"
+            android:layout_marginTop="@dimen/x_large_margin"
             android:text="@string/text_terms_and_conditions_line_one_register_recovery_account"
             app:layout_constraintBottom_toTopOf="@id/textView_terms_and_conditions"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
@@ -65,7 +65,7 @@
             style="@style/AppPrimaryButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_margin"
+            android:layout_marginTop="@dimen/x_large_margin"
             android:text="@string/text_register"
             app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
