--- a/app/src/main/res/layout/contact_us_fragment.xml
+++ b/app/src/main/res/layout/contact_us_fragment.xml
@@ -29,7 +29,7 @@
                     style="@style/BodyTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/large_margin"
+                    android:layout_marginTop="@dimen/x_large_margin"
                     android:text="@string/text_description"
                     app:layout_constraintEnd_toEndOf="@id/guideline_end"
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
@@ -40,7 +40,7 @@
                     style="@style/BackgroundSpinner"
                     android:layout_width="0dp"
                     android:layout_height="54dp"
-                    android:layout_marginTop="@dimen/large_margin"
+                    android:layout_marginTop="@dimen/x_large_margin"
                     android:spinnerMode="dropdown"
                     app:layout_constraintEnd_toEndOf="@id/guideline_end"
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
@@ -118,7 +118,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintGuide_end="@dimen/large_margin" />
+                    app:layout_constraintGuide_end="@dimen/x_large_margin" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
