--- a/app/src/main/res/layout/enter_code_fragment.xml
+++ b/app/src/main/res/layout/enter_code_fragment.xml
@@ -51,7 +51,7 @@
                         style="@style/BodyTextView.Bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/large_margin"
+                        android:layout_marginTop="@dimen/x_large_margin"
                         android:text="@string/text_check_push"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
