--- a/app/src/main/res/layout/enter_pin_fragment.xml
+++ b/app/src/main/res/layout/enter_pin_fragment.xml
@@ -60,7 +60,7 @@
                 android:id="@+id/numeric_keyboard"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/large_margin"
+                android:layout_marginTop="@dimen/x_large_margin"
                 android:tint="?attr/attrColorButtonTint"
                 app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
                 app:layout_constraintEnd_toEndOf="@id/guideline_end"
