--- a/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
+++ b/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
@@ -67,7 +67,7 @@
                 style="@style/BodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/large_margin"
+                android:layout_marginStart="@dimen/x_large_margin"
                 android:text="@string/text_take_photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
                 style="@style/BodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/large_margin"
+                android:layout_marginStart="@dimen/x_large_margin"
                 android:text="@string/text_select_photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
                 style="@style/BodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/large_margin"
+                android:layout_marginStart="@dimen/x_large_margin"
                 android:text="@string/text_select_default"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
