--- a/app/src/main/res/layout/invite_someone_fragment.xml
+++ b/app/src/main/res/layout/invite_someone_fragment.xml
@@ -32,8 +32,8 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_margin"
-            android:layout_marginBottom="@dimen/large_margin"
+            android:layout_marginTop="@dimen/x_large_margin"
+            android:layout_marginBottom="@dimen/x_large_margin"
             android:text="@string/text_info_invite_someone"
             android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/button_share"
