--- a/app/src/main/res/layout/register_recovery_account_question_fragment.xml
+++ b/app/src/main/res/layout/register_recovery_account_question_fragment.xml
@@ -70,7 +70,7 @@
                     style="@style/BodyTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/large_margin"
+                    android:layout_marginTop="@dimen/x_large_margin"
                     android:text="@string/text_count_questions"
                     app:layout_constraintBottom_toTopOf="@+id/spinner_questions"
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
