--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -219,6 +219,13 @@
         <action
             android:id="@+id/action_profileFragment_to_conversationCameraFragment"
             app:destination="@id/conversationCameraFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_landingFragment"
+            app:destination="@id/landingFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/securitySettingsFragment"
@@ -615,6 +622,10 @@
             android:name="location"
             android:defaultValue="0"
             app:argType="integer" />
+        <argument
+            android:name="message"
+            android:defaultValue=''
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/attachmentGalleryFragment"
@@ -641,6 +652,10 @@
             android:name="location"
             android:defaultValue="0"
             app:argType="integer" />
+        <argument
+            android:name="message"
+            android:defaultValue=''
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/attachmentPreviewFragment"
@@ -659,6 +674,10 @@
         <argument
             android:name="quote"
             android:defaultValue='""'
+            app:argType="string" />
+        <argument
+            android:name="message"
+            android:defaultValue=''
             app:argType="string" />
     </fragment>
     <fragment
