--- a/app/src/main/res/values-de/appearance_settings.xml
+++ b/app/src/main/res/values-de/appearance_settings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="text_color_scheme">Themenauswahl</string>
     <string name="text_user_display_format">Nutzername Format</string>
-    <string name="text_language">sprache</string>
+    <string name="text_language">Sprache</string>
     <string name="text_light_theme">Lichtthema</string>
     <string name="text_dark_theme">Dunkles Thema</string>
     <string name="text_name_and_nickname">Name und Spitzname</string>
