--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -73,6 +73,6 @@
     <string name="text_no">No</string>
     <string name="text_empty_state_search_contacts">Tu búsqueda no produjo resultado</string>
     <string name="text_contact">CONTACTO</string>
-    <string name="text_error_updating_language">Ha ocurrido un error al cambiar lenguage, por favor inténtelo nuevamente</string>
+    <string name="text_error_updating_language">Ha ocurrido un error al cambiar idioma, por favor inténtelo nuevamente</string>
     <string name="text_emptystate_search_friends_title">Busca a tus amigos por apodo y comunícate</string>
 </resources>
