--- a/app/src/main/res/values-it/appearance_settings.xml
+++ b/app/src/main/res/values-it/appearance_settings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="text_color_scheme">Selezione del tema</string>
     <string name="text_user_display_format">Formato nome utente</string>
-    <string name="text_language">lingua</string>
+    <string name="text_language">Lingua</string>
     <string name="text_light_theme">Tema leggero</string>
     <string name="text_dark_theme">Tema scuro</string>
     <string name="text_name_and_nickname">Nome e soprannome</string>
