--- a/app/src/main/res/values-pt/appearance_settings.xml
+++ b/app/src/main/res/values-pt/appearance_settings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="text_color_scheme">Seleção de tópico</string>
     <string name="text_user_display_format">Formato do nome de usuário</string>
-    <string name="text_language">idioma</string>
+    <string name="text_language">Idioma</string>
     <string name="text_light_theme">Tema claro</string>
     <string name="text_dark_theme">Tema escuro</string>
     <string name="text_name_and_nickname">Nome e apelido</string>
