Cambio en color de burbuja de mensaje

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -575,6 +575,10 @@
             android:name="location"
             android:defaultValue="0"
             app:argType="integer" />
+        <argument
+            android:name="message"
+            android:defaultValue=''
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/contactProfileFragment"
